--- a/index.html
+++ b/index.html
@@ -5,337 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RTW88 WiFi Driver Installer</title>
-    <style>
-        :root {
-            /* Default to Dark Mode as base */
-            --color-bg: #1a1d23;
-            --color-surface: #22262e;
-            --color-primary: #32b8c4;
-            --color-primary-hover: #2da3ad;
-            --color-text: #e5e7eb;
-            --color-text-muted: #9ca3af;
-            --color-border: rgba(255, 255, 255, 0.1);
-            --color-success: #10b981;
-            --color-warning: #f59e0b;
-            --radius: 12px;
-            --shadow-sm: 0 4px 6px -1px rgba(0, 0, 0, 0.3);
-            --shadow-md: 0 10px 15px -3px rgba(0, 0, 0, 0.4);
-        }
-
-        [data-theme="light"] {
-            --color-bg: #f9fafb;
-            --color-surface: #ffffff;
-            --color-primary: #0891b2;
-            --color-primary-hover: #0e7490;
-            --color-text: #1f2937;
-            --color-text-muted: #6b7280;
-            --color-border: rgba(0, 0, 0, 0.1);
-            --color-success: #059669;
-            --color-warning: #d97706;
-            --shadow-sm: 0 4px 6px -1px rgba(0, 0, 0, 0.05);
-            --shadow-md: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            background: var(--color-bg);
-            color: var(--color-text);
-            line-height: 1.6;
-            min-height: 100vh;
-            padding: 20px;
-            transition: background-color 0.3s ease, color 0.3s ease;
-        }
-
-        .container {
-            max-width: 900px;
-            margin: 0 auto;
-        }
-
-        header {
-            text-align: center;
-            margin-bottom: 40px;
-            padding: 40px 20px;
-        }
-
-        h1 {
-            font-size: 2.5rem;
-            font-weight: 700;
-            margin-bottom: 10px;
-            background: linear-gradient(135deg, var(--color-primary), #60d5e8);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-        }
-
-        .subtitle {
-            font-size: 1.1rem;
-            color: var(--color-text-muted);
-            margin-bottom: 20px;
-        }
-
-        .badge-container {
-            display: flex;
-            gap: 10px;
-            justify-content: center;
-            flex-wrap: wrap;
-            margin-top: 20px;
-        }
-
-        .badge {
-            display: inline-flex;
-            align-items: center;
-            gap: 6px;
-            padding: 6px 14px;
-            background: var(--color-surface);
-            border: 1px solid var(--color-border);
-            border-radius: 20px;
-            font-size: 0.85rem;
-            color: var(--color-text-muted);
-        }
-
-        .badge svg {
-            width: 16px;
-            height: 16px;
-            fill: var(--color-primary);
-        }
-
-        .card {
-            background: var(--color-surface);
-            border: 1px solid var(--color-border);
-            border-radius: var(--radius);
-            padding: 30px;
-            margin-bottom: 30px;
-            box-shadow: var(--shadow-md);
-            transition: background-color 0.3s ease,
-                border-color 0.3s ease,
-                box-shadow 0.3s ease;
-        }
-
-        .card h2 {
-            font-size: 1.5rem;
-            margin-bottom: 20px;
-            color: var(--color-primary);
-        }
-
-        .command-box {
-            background: #0d1117;
-            border: 1px solid var(--color-border);
-            border-radius: 8px;
-            padding: 20px;
-            position: relative;
-            margin: 20px 0;
-        }
-
-        .command-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 12px;
-        }
-
-        .command-label {
-            font-size: 0.85rem;
-            color: var(--color-text-muted);
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-        }
-
-        .copy-btn {
-            background: var(--color-primary);
-            color: white;
-            border: none;
-            padding: 8px 16px;
-            border-radius: 6px;
-            cursor: pointer;
-            font-size: 0.9rem;
-            font-weight: 500;
-            display: flex;
-            align-items: center;
-            gap: 6px;
-            transition: all 0.2s;
-        }
-
-        .copy-btn:hover {
-            background: var(--color-primary-hover);
-            transform: translateY(-1px);
-        }
-
-        .copy-btn:active {
-            transform: translateY(0);
-        }
-
-        .copy-btn.copied {
-            background: var(--color-success);
-        }
-
-        .copy-btn svg {
-            width: 16px;
-            height: 16px;
-            fill: white;
-        }
-
-        .command-text {
-            font-family: 'Courier New', Consolas, Monaco, monospace;
-            font-size: 0.95rem;
-            color: #79c0ff;
-            background: transparent;
-            border: none;
-            width: 100%;
-            padding: 10px;
-            resize: none;
-            overflow-x: auto;
-            white-space: pre;
-        }
-
-        .info-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            margin: 20px 0;
-        }
-
-        .info-item {
-            padding: 20px;
-            background: rgba(50, 184, 196, 0.1);
-            border: 1px solid rgba(50, 184, 196, 0.2);
-            border-radius: 8px;
-        }
-
-        .info-item h3 {
-            font-size: 1rem;
-            color: var(--color-primary);
-            margin-bottom: 8px;
-        }
-
-        .info-item p {
-            font-size: 0.9rem;
-            color: var(--color-text-muted);
-        }
-
-        .chipset-list {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-
-        .chipset-category {
-            background: rgba(50, 184, 196, 0.05);
-            border-left: 3px solid var(--color-primary);
-            padding: 15px;
-            border-radius: 4px;
-        }
-
-        .chipset-category h4 {
-            color: var(--color-primary);
-            margin-bottom: 8px;
-            font-size: 0.95rem;
-        }
-
-        .chipset-category p {
-            color: var(--color-text-muted);
-            font-size: 0.9rem;
-            line-height: 1.8;
-        }
-
-        .warning-box {
-            background: rgba(245, 158, 11, 0.1);
-            border: 1px solid rgba(245, 158, 11, 0.3);
-            border-radius: 8px;
-            padding: 16px;
-            margin: 20px 0;
-            display: flex;
-            gap: 12px;
-        }
-
-        .warning-box svg {
-            width: 24px;
-            height: 24px;
-            flex-shrink: 0;
-            fill: var(--color-warning);
-        }
-
-        .warning-content {
-            flex: 1;
-        }
-
-        .warning-content h4 {
-            color: var(--color-warning);
-            margin-bottom: 6px;
-            font-size: 1rem;
-        }
-
-        .warning-content p {
-            color: var(--color-text-muted);
-            font-size: 0.9rem;
-        }
-
-        footer {
-            text-align: center;
-            padding: 40px 20px;
-            color: var(--color-text-muted);
-            font-size: 0.9rem;
-            border-top: 1px solid var(--color-border);
-            margin-top: 40px;
-        }
-
-        footer a {
-            color: var(--color-primary);
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-
-        .back-link {
-            display: inline-block;
-            margin-bottom: 30px;
-            padding: 8px 16px;
-            color: var(--color-text-muted);
-            text-decoration: none;
-            font-size: 0.9rem;
-            transition: all 0.2s;
-            border-bottom: 1px solid transparent;
-        }
-
-        .back-link:hover {
-            color: var(--color-primary);
-            border-bottom-color: var(--color-primary);
-            text-decoration: none;
-        }
-
-        .back-link svg {
-            vertical-align: middle;
-            margin-right: 4px;
-        }
-
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 2rem;
-            }
-
-            .card {
-                padding: 20px;
-            }
-
-            .info-grid {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <div class="theme-toggle" style="position: absolute; top: 20px; right: 20px;">
-            <button id="themeToggleBtn"
-                style="background: var(--color-surface); border: 1px solid var(--color-border); color: var(--color-text); padding: 8px 16px; border-radius: 20px; cursor: pointer; display: flex; align-items: center; gap: 8px; font-weight: 600; transition: all 0.2s ease; box-shadow: var(--shadow-sm);">
+        <div class="theme-toggle">
+            <button id="themeToggleBtn">
                 <svg id="themeIcon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
@@ -500,93 +176,7 @@
         </footer>
     </div>
 
-    <script>
-        function copyCommand() {
-            const commandText = document.getElementById('installCommand');
-            const copyBtn = document.querySelector('.copy-btn');
-            const btnText = copyBtn.querySelector('.btn-text');
-
-            // Select and copy the text
-            commandText.select();
-            commandText.setSelectionRange(0, 99999); // For mobile devices
-
-            navigator.clipboard.writeText(commandText.value).then(() => {
-                // Update button to show success
-                copyBtn.classList.add('copied');
-                btnText.textContent = 'Copied!';
-
-                // Reset button after 2 seconds
-                setTimeout(() => {
-                    copyBtn.classList.remove('copied');
-                    btnText.textContent = 'Copy';
-                }, 2000);
-            }).catch(err => {
-                console.error('Failed to copy:', err);
-                // Fallback for older browsers
-                try {
-                    document.execCommand('copy');
-                    copyBtn.classList.add('copied');
-                    btnText.textContent = 'Copied!';
-                    setTimeout(() => {
-                        copyBtn.classList.remove('copied');
-                        btnText.textContent = 'Copy';
-                    }, 2000);
-                } catch (e) {
-                    alert('Failed to copy. Please copy manually.');
-                }
-            });
-        }
-
-        // Allow clicking on the command text to copy
-        document.getElementById('installCommand').addEventListener('click', function () {
-            this.select();
-        });
-    </script>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const themeToggleBtn = document.getElementById('themeToggleBtn');
-            const themeIcon = document.getElementById('themeIcon');
-            const themeText = document.getElementById('themeText');
-
-            const systemDark = window.matchMedia('(prefers-color-scheme: dark)');
-
-            // Apply theme, falling back to system preference if no manual override
-            function applyTheme(theme) {
-                document.documentElement.setAttribute('data-theme', theme);
-                updateToggleButton(theme);
-            }
-
-            const savedTheme = localStorage.getItem('theme');
-            applyTheme(savedTheme || (systemDark.matches ? 'dark' : 'light'));
-
-            // Follow system changes automatically unless the user has manually chosen a theme
-            systemDark.addEventListener('change', (e) => {
-                if (!localStorage.getItem('theme')) {
-                    applyTheme(e.matches ? 'dark' : 'light');
-                }
-            });
-
-            themeToggleBtn.addEventListener('click', () => {
-                const currentTheme = document.documentElement.getAttribute('data-theme');
-                const newTheme = currentTheme === 'light' ? 'dark' : 'light';
-
-                localStorage.setItem('theme', newTheme);
-                applyTheme(newTheme);
-            });
-
-            function updateToggleButton(theme) {
-                if (theme === 'light') {
-                    themeIcon.innerHTML = '<circle cx="12" cy="12" r="5"></circle><line x1="12" y1="1" x2="12" y2="3"></line><line x1="12" y1="21" x2="12" y2="23"></line><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line><line x1="1" y1="12" x2="3" y2="12"></line><line x1="21" y1="12" x2="23" y2="12"></line><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>';
-                    themeText.textContent = 'Light Mode';
-                } else {
-                    themeIcon.innerHTML = '<path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>';
-                    themeText.textContent = 'Dark Mode';
-                }
-            }
-        });
-    </script>
-
+    <script src="main.js"></script>
 </body>
 
 </html>
